fix whitespace layout.... again
This is an unforced error: eventually all of this should be whitespace insensitive

--- a/static/main.css
+++ b/static/main.css
@@ -990,6 +990,12 @@ blob, gist, patch {
 }
 
 .verse-stats-line {
+	td:nth-child(7), td:nth-child(8) {
+		text-align: right;
+	}
+	td:nth-child(9) {
+		padding-left: 1.5rem;
+	}
 	&.verse-bot {
 		background-color: #333;
 		color: #888;
